@@ -17,6 +17,7 @@
 class Comment < ActiveRecord::Base
   belongs_to  :user
   belongs_to  :commentable, :polymorphic => true
+  has_many    :activities, :as => :subject, :order => 'created_at DESC'
 
   validates_presence_of :user_id, :commentable_id, :commentable_type, :comment
 end
