@@ -33,14 +33,15 @@
 #
 
 class Contact < ActiveRecord::Base
-  belongs_to :user
-  belongs_to :lead
-  belongs_to :assignee, :class_name => "User", :foreign_key => :assigned_to
-  has_one :account_contact, :dependent => :destroy
-  has_one :account, :through => :account_contact
-  has_many :contact_opportunities, :dependent => :destroy
-  has_many :opportunities, :through => :contact_opportunities, :uniq => true, :order => "id DESC"
-  has_many :tasks, :as => :asset, :dependent => :destroy, :order => 'created_at DESC'
+  belongs_to  :user
+  belongs_to  :lead
+  belongs_to  :assignee, :class_name => "User", :foreign_key => :assigned_to
+  has_one     :account_contact, :dependent => :destroy
+  has_one     :account, :through => :account_contact
+  has_many    :contact_opportunities, :dependent => :destroy
+  has_many    :opportunities, :through => :contact_opportunities, :uniq => true, :order => "id DESC"
+  has_many    :tasks, :as => :asset, :dependent => :destroy, :order => 'created_at DESC'
+  has_many    :activities, :as => :subject, :order => 'created_at DESC'
 
   uses_mysql_uuid
   uses_user_permissions
