@@ -73,7 +73,7 @@ Rails::Initializer.run do |config|
 
   # Activate observers that should always be running
   # Please note that observers generated using script/generate observer need to have an _observer suffix
-  # config.active_record.observers = :cacher, :garbage_collector, :forum_observer
+  config.active_record.observers = :activity_observer
 
   # Have migrations with numeric prefix instead of UTC timestamp.
   config.active_record.timestamped_migrations = false
