@@ -3,8 +3,8 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 describe Activity do
   before(:each) do
     @valid_attributes = {
-      :user  => Factory(:user),
-      :asset => Factory(:lead)
+      :user => Factory(:user),
+      :subject => Factory(:lead)
     }
   end
 
